# rustdb

./: .gitignore  Cargo.toml  README.md  current_db
jmeter/: test.jmx  test_read.jmx
load_test/: ExportCSV.csv
readonly_storage_test/: 2  3  4da053f2db81bb26  53e155bcbdeb560f  e0c515663f0ea931  initial_segment  integration_current_db
src/: core.rs  lib.rs  rest_api.rs  service.rs  store.rs
tests/: compressor_integration.rs  rust_db_integration.rs
