[package]
name = "rustdb"
version = "0.1.0"
authors = ["Tiago Deliberali <tiago.deliberali@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
byteorder = "1.3"
crc = "1.8"
rand = "0.7.3"

[lib]
name = "rustdb"
path = "src/lib.rs"

[[bin]]
name = "rustdb_rest"
path = "src/rest_api.rs"